--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/Home.css">
     <!--Import Bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <!--Import Google Icon-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mitr&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/Home.css">
 </head>
 
 <body>
@@ -35,7 +40,8 @@
             </ul>
         </li>
         <li><a href="#">All</a></li>
-        <li id="SideMore"><nobr><a href="javascript:void(0)">More ▾</a></nobr>
+        <li id="SideMore">
+            <nobr><a href="javascript:void(0)">More ▾</a></nobr>
             <ul class="sideDropdown" id="SideMoreDrop">
                 <li><a href="#">Credit</a></li>
             </ul>
@@ -49,47 +55,194 @@
     <div id="main">
         <!-- ------------------NavBar---------------------- -->
         <div style="background-color: lightgray;">
-        <ul class="NavigationBar">
-            <li id="Cart"><a href="cart.html">
-                    <i class="material-icons">shopping_cart</i>
-            <li id="Account"><a href="#account">
-                    <i class="material-icons">person</i>
-                </a></li>
-            <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
-                <ul class="dropdown" id="moreDrop">
-                    <li><a href="#">Credit</a></li>
-                </ul>
-            </li>
-            <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
-            <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
-                <ul class="dropdown" id="categoriesDrop">
-                    <li><a href="catagories.php?Luktung=Luktung">Luktung</a></li>
-                    <li><a href="catagories.php?T-POP=T-POP">T-POP</a></li>
-                    <li><a href="catagories.php?K-POP=K-POP">K-POP</a></li>
-                    <li><a href="catagories.php?HIP-HOP=HIP-HOP">Hip hop</a></li>
-                    <li><a href="catagories.php?R%26B=R%26B">R&B</a></li>
-                    <li><a href="catagories.php?Jazz=Jazz">Jazz</a></li>
-                </ul>
-            </li>
-            <li id="Menu"><a href="javascript:void(0)" onclick="openNav()"><i class="material-icons">&#xe5d2;</i></a></li>
-            <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
-        </ul>
+            <ul class="NavigationBar">
+                <li id="Cart"><a href="cart.html">
+                        <i class="material-icons">shopping_cart</i>
+                <li id="Account"><a href="#account">
+                        <i class="material-icons">person</i>
+                    </a></li>
+                <li id="More"><b><a href="javascript:void(0)">More ▾</a></b>
+                    <ul class="dropdown" id="moreDrop">
+                        <li><a href="#">Credit</a></li>
+                    </ul>
+                </li>
+                <li id="ShopAll"><b><a href="#ShopAll">All</a></b></li>
+                <li id="Categories"><b><a href="javascript:void(0)">Categories ▾</a></b>
+                    <ul class="dropdown" id="categoriesDrop">
+                        <li><a href="catagories.php?Luktung=Luktung">Luktung</a></li>
+                        <li><a href="catagories.php?T-POP=T-POP">T-POP</a></li>
+                        <li><a href="catagories.php?K-POP=K-POP">K-POP</a></li>
+                        <li><a href="catagories.php?HIP-HOP=HIP-HOP">Hip hop</a></li>
+                        <li><a href="catagories.php?R%26B=R%26B">R&B</a></li>
+                        <li><a href="catagories.php?Jazz=Jazz">Jazz</a></li>
+                    </ul>
+                </li>
+                <li id="Menu"><a href="javascript:void(0)" onclick="openNav()"><i
+                            class="material-icons">&#xe5d2;</i></a>
+                </li>
+                <li id="Icon"><a href="index.html">Thiscordmerch</a></li>
+            </ul>
         </div>
         <!-- ------------------End--NavBar----------------- -->
 
-        <image style="width:100%; height:45vw" src="https://i.ytimg.com/vi/K4TOrB7at0Y/maxresdefault.jpg">
+        <!-- <image style="width:100%; height:45vw" src="https://i.ytimg.com/vi/K4TOrB7at0Y/maxresdefault.jpg"> -->
 
-            <div class="Main">
-                This is test text.
-                <div class="Genre">
-                    <div class="GenreList">Classic</div>
-                    <div class="GenreList">Country</div>
-                    <div class="GenreList">Jazz</div>
-                    <div class="GenreList">R&B</div>
-                    <div class="GenreList">Pop</div>
+        <!-- <div class="Main"> -->
+        <!-- carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://cdn.discordapp.com/attachments/882306005772427284/1033255028716212295/lop-eared-314881_1280.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://cdn.discordapp.com/attachments/882306005772427284/1033255030851108914/pablo-martinez-AdagxtVKRWE-unsplash.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://cdn.discordapp.com/attachments/882306005772427284/1033255049410908220/janan-lagerwall-p2UbTX6Uoig-unsplash.jpg"
+                        class="d-block w-100" alt="...">
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <!-- end carousel -->
+        <div class="Main">
+            <h1 class="fw-bold">Music genre</h1>
+            <div class="row Genre mx-auto">
+                <div class="col-md-2 col-sm-4 col-6">
+                    <div class="GenreList mx-auto">
+                        Luktung
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6">
+                    <div class="GenreList mx-auto">
+                        T-POP
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6">
+                    <div class="GenreList mx-auto">
+                        K-POP
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6">
+                    <div class="GenreList mx-auto">
+                        HIP-HOP
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6">
+                    <div class="GenreList mx-auto">
+                        R&B
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6">
+                    <div class="GenreList mx-auto">
+                        JAZZ
+                    </div>
+                </div>
+                
+            </div>
+            <!-- Recommend -->
+            <h1 class="fw-bold mb-5">Recommend</h1>
+            <div class="w-75 mx-auto">
+                <div class="row Recommend1 mb-5">
+                    <div class="col-lg-6 col-sm-12 music">
+                        <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192566485876786/easily.jpg"
+                            class="img-fluid" alt="Easily">
+                    </div>
+                    <div class="col-lg-6 col-sm-12 detail text-start">
+                        <h3>ชื่อเพลง : Easily</h3>
+                        <h3>ศิลปิน : Bruno Major</h3>
+                        <p class="fs-4">"Don’t you tell me that it wasn’t meant to be Call it quits, call it destiny
+                            Just because it
+                            won’t come easily Doesn’t mean we shouldn’t try"</p>
+                    </div>
+                </div>
+                <div class="row Recommend2 mb-5">
+                    <div class="col-lg-6 col-sm-12 music">
+                        <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192567186329740/beatiful.jpg"
+                            class="img-fluid" alt="Beautiful">
+                    </div>
+                    <div class="col-lg-6 col-sm-12 detail text-start">
+                        <h3>ชื่อเพลง : Beautiful</h3>
+                        <h3>ศิลปิน : Crush</h3>
+                        <p class="fs-4">"It's a beautiful life, beautiful day 미치도록 널 사랑했었던 날 Beautiful life, beautiful
+                            day 너를 잃고 싶지 않아
+                            Beautiful my love Beautiful your heart It's a beautiful life"</p>
+                    </div>
+                </div>
+                <div class="row Recommend3 mb-5">
+                    <div class="col-lg-6 col-sm-12 music">
+                        <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192586840834140/Eternal_Frame.jpg"
+                            class="img-fluid" alt="Ethernal Frame">
+                    </div>
+                    <div class="col-lg-6 col-sm-12 detail text-start">
+                        <h3>ชื่อเพลง : Ethernal Frame</h3>
+                        <h3>ศิลปิน : Atomic Kitten</h3>
+                        <p class="fs-4">"Close your eyes, give me your hand, darling Do you feel my heart beating? Do
+                            you understand? Do
+                            you feel the same? Am I only dreaming? Is this burning an eternal flame?"</p>
+                    </div>
+                </div>
+                <div class="row Recommend4 mb-5">
+                    <div class="col-lg-6 col-sm-12 music">
+                        <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192616670732419/419f4591e0ac693d.jpg"
+                            class="img-fluid" alt="หลอก">
+                    </div>
+                    <div class="col-lg-6 col-sm-12 detail text-start">
+                        <h3>ชื่อเพลง : หลอก</h3>
+                        <h3>ศิลปิน : NICECNX</h3>
+                        <p class="fs-4">"สุดท้ายแล้วเธอไม่โกหก แต่ลืมบอกกันว่าไม่รัก ฉันโดนหลอก เธอบอกกันเธอใจร้าย
+                            สุดท้ายแล้วเป็นไง เธอทิ้งตัวฉันไป แต่อันที่จริงฉันไม่รักเธออยู่แล้ว"</p>
+                    </div>
+                </div>
+                <div class="row Recommend5 mb-5">
+                    <div class="col-lg-6 col-sm-12 music">
+                        <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192626749648946/3065f3a30de690a0.jpg"
+                            class="img-fluid" alt="จี่หอย">
+                    </div>
+                    <div class="col-lg-6 col-sm-12 detail text-start">
+                        <h3>ชื่อเพลง : จี่หอย</h3>
+                        <h3>ศิลปิน : พี สะเดิด</h3>
+                        <p class="fs-4">"เลาะเลียบตามแคบน้ำ แคมหนอง ก็มีของกินเป็นอาหาร หอยปากกว้าง นั่นหล่ะโตการ
+                            มันเป็นโตมาร กัดกกข้าวในนา มันเป็นโตมาร กัดกกข้าวในนา"</p>
+                    </div>
+                </div>
+                <div class="row Recommend6 mb-5">
+                    <div class="col-lg-6 col-sm-12 music">
+                        <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192640767004682/f44b670a6aedd8d9.jpg"
+                            class="img-fluid" alt="เกินต้าน">
+                    </div>
+
+                    <div class="col-lg-6 col-sm-12 detail text-start">
+                        <h3>ชื่อเพลง : เกินต้าน</h3>
+                        <h3>ศิลปิน : PIXXIE</h3>
+                        <p class="fs-4">"ก็เธอน่ารักจนเกินต้านขนาดนี้ จะรักคนคนนี้ เพราะคนอื่น ก็สู้เธอไม่ได้หรอก
+                            มองทีไรก็น่ารักและสดใส คงต้านเธอไม่ไหว ฉันคงไปรักคนอื่น ไม่ได้หรอก"</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end recommend -->
     </div>
+    <!-- </div> -->
 
     <script src="assets/js/Home.js"></script>
     <script src="assets/js/NavBar.js"></script>
