--- a/login.html
+++ b/login.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="assets/css/NavBar.css">
     
     <!--Import Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <!--Import Google Icon-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import Font-->
@@ -80,7 +83,7 @@
         <div class="login text-center m-5">
             <h1 class="fw-bold">Login</h1>
             <hr class="hrOne mx-auto">
-            <form class="form" action="">
+            <form class="form" method="post">
                 <input type="text" class="inpEmail rounded-0 mt-4 mb-2 w-25 p-2" id="Email" name="email" placeholder="Email"><br>
                 <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" id="Pass" name="password" placeholder="Password"><br>
                 <button type="button" id="btn" class="but rounded-0 mb-4 w-25 p-2" onclick="checkIn()">Sign In</button>
