--- a/createAcc.html
+++ b/createAcc.html
@@ -7,10 +7,12 @@
     <title>Create Account</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
     <!--Import Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <!--Import Google Icon-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import Font-->
@@ -47,6 +49,9 @@
     </ul>
     <!-- ---------------End--SideNavBar------------------- -->
 
+    <?php
+
+    ?>
     <div id="main">
         <!-- ------------------NavBar---------------------- -->
         <div style="background-color: #DE7119;">
@@ -80,17 +85,46 @@
         <div class="login text-center m-5">
             <h1 class="fw-bold">Create Account</h1>
             <hr class="hrOne mx-auto">
-            <form class="form" action="">
-                <input type="text" class="inpFname rounded-0 mt-4 mb-2 w-25 p-2" name="fname" placeholder="First Name"><br>
-                <input type="text" class="inpLname rounded-0 mb-2 w-25 p-2" name="lname" placeholder="Last Name"><br>
-                <input type="text" class="inpEmail rounded-0 mb-2 w-25 p-2" name="email" placeholder="Email"><br>
-                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Password"><br>
-                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password" placeholder="Comfirm Password"><br>
-                <button class="but rounded-0 mb-4 w-25 p-2">Create</button>
+            <form class="form" method="post">
+                <input 
+                type="text"
+                class="inpFname rounded-0 mt-4 mb-2 w-25 p-2"
+                id="fname"
+                name="fname" 
+                placeholder="First Name"><br>
+
+                <input 
+                type="text" 
+                class="inpLname rounded-0 mb-2 w-25 p-2" 
+                id="lname"
+                name="lname" 
+                placeholder="Last Name"><br>
+
+                <input 
+                type="text" 
+                class="inpEmail rounded-0 mb-2 w-25 p-2" 
+                id="email"
+                name="email" 
+                placeholder="Email"><br>
+
+                <input 
+                type="password" 
+                class="inpPass rounded-0 mb-2 w-25 p-2" 
+                id="password1"
+                name="password1" 
+                placeholder="Password"><br>
+
+                <input 
+                type="password" 
+                class="inpPass rounded-0 mb-2 w-25 p-2" 
+                id="password2"
+                name="password2" 
+                placeholder="Comfirm Password"><br>
+                <button type="button" id="btn" class="but rounded-0 mb-4 w-25 p-2" onclick="Create()">Create</button>
             </form>
             <!-- <hr class="hrTwo mx-auto my-0"> -->
             <div class="fw-normal">
-                <a href="login.html" class="create">Login to Account</a>
+                <a href="login.html" class="create">Login</a>
             </div>
             <hr class="hrTwo mx-auto my-0">
             <div class="fw-normal">
