--- a/credit.html
+++ b/credit.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="assets/css/NavBar.css">
     <link rel="stylesheet" href="assets/css/credit.css">
     <!--Import Bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
@@ -79,7 +80,7 @@
 
         <div class="m-5 creditMain">
             <h1><b>Teacher</b></h1>
-            <hr class="mx-auto m-4">
+            <hr class="mx-auto" style="width:10vw; border-top: 2px solid;">
             <div class='card col-12 col-sm-6 col-md-4 mx-auto'>
                 <div class="card-body">
                     <img class='card-img-top' src='assets/images/Credit/Manop.jpg' alt='Manop' style='width:75%;'>
@@ -89,7 +90,7 @@
             </div>
             <br><br><br>
             <h1><b>Member</b></h1>
-            <hr class="mx-auto m-4">
+            <hr class="mx-auto" style="width:10vw; border-top: 2px solid;">
             <div class="row mx-auto justify-content-center">
                 <div class='card col-12 col-sm-6 col-md-4'>
                     <div class='card-body'>
